--- a/ux.html
+++ b/ux.html
@@ -42,11 +42,11 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/skilljar/4547e296-23bd-41d4-b7f6-f8709f97f33d'>Skilljar - Senior User Experience (UX) Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/skilljar/af6b66c1-ee76-46c3-917a-231d8cfa00e2'>Skilljar - User Experience (UX) Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/automationanywhere/job/oN6zafwm'>Automation Anywhere Careers - Designer, Sr. (UX)</a></h5> 
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/govirtuo/a8110242-da20-47bc-847f-1e5badd6beae'>Virtuo - UX designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/govirtuo/a8110242-da20-47bc-847f-1e5badd6beae'>Virtuo - UX designer</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -135,11 +135,11 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -164,7 +164,7 @@ research, interaction design, data visualization, prototyping, and the productio
 <p><span class="badge badge-light">Jakarta Jakarta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
+<h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -206,7 +206,7 @@ Provides project management expertise for highly complex creative projects,?...<
 <p>Jul 15, 2019 ... GOWAGO AG has a job opening for UX Researcher/Designer in Z?rich (
 published: 16.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://global-savings-group.join.com/jobs/270481-ux-designer-m-f'>Job @ Global Savings Group (Munich): UX Designer (... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://global-savings-group.join.com/jobs/270481-ux-designer-m-f'>Job @ Global Savings Group (Munich): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -246,7 +246,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/servian/cf176827-3d56-4548-a615-174d7278ffed'>Servian - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/servian/cf176827-3d56-4548-a615-174d7278ffed'>Servian - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -258,7 +258,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
       Lead UI / UX Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -306,7 +306,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -392,7 +392,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -402,7 +402,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
